syntax = "proto3";

package com.example.datacollector.rpc.protobuf;

option java_outer_classname="SalesDetailQueryRequestProto";

import "RequestParam.proto";

message SalesDetailQueryRequestMessage{
  repeated RequestParamMessage requestParam=1;
}
